Fix virtualized collection scrollbar catching

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -92,3 +92,7 @@ a {
 .controls a {
   display: block
 }
+
+.iw {
+  overflow: hidden
+}
